k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-stack-server
spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
      - name: mern-stack-server
        image: "jeffli1981/mern-stack-server"
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      
---

apiVersion: v1
kind: Service
metadata:
  name: mern-stack-server-service
spec:
  selector:
    component: backend
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
