k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-stack-frontend
spec:
  selector:
    matchLabels:
      component: frontend
  replicas: 2
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers: 
      - name: mern-stack-frontend
        image: "jeffli1981/mern-stack-frontend"
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: mern-stack-frontend-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - port: 3001
    targetPort: 3001
